--- a/nonuniform-sampling-demo.html
+++ b/nonuniform-sampling-demo.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Rejection Sampling Demonstration</title>
+  <title>Nonuniform Sampling Demonstration</title>
  <link rel='stylesheet' href='https://academo.org/scss/main.css?v=1739642353750'>
 
 </head>
